tests/src/frontend/syntax/invalid/match_comma.sk
fun main(): String {
  _ = 1 match {
    | 1 -> 2,
    | 2 -> 3
    | _ -> 4
  };
  "Hello Skip!\n"
}
